fix(VTextField): align dense label with prefix when input is empty
fixes #12743

--- a/packages/vuetify/src/components/VTextField/VTextField.sass
+++ b/packages/vuetify/src/components/VTextField/VTextField.sass
@@ -89,6 +89,9 @@
   &.v-input--dense
     padding-top: 0
 
+    .v-label
+      top: 4px
+
     &:not(.v-text-field--outlined)
       .v-text-field__prefix,
       input
